fixed a small misleading file naming issue

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "54e34326",
    "metadata": {},
    "source": [
-    "#  Data analysis on database created in connection.py"
+    "#  Data analysis on database created in setup_db.py"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 112,
    "id": "5263d69a",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 113,
    "id": "05b10fb9",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 114,
    "id": "9f41f69a",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "[200 rows x 5 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "id": "a2d65c5c",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "id": "77a3b11e",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 117,
    "id": "c452510b",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "id": "ecd143ea",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "Name: amount, Length: 180, dtype: float64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 119,
    "id": "4be047b1",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "9    Music  1286.0"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 120,
    "id": "643561d4",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 121,
    "id": "ca8de57b",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 122,
    "id": "9b422316",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 123,
    "id": "c948c0f9",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "12  2025-12   3361.0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 124,
    "id": "58d6a0e8",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "a8357aa5",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "bff14e6c",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "f8fe1163",
    "metadata": {},
    "outputs": [
